--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
 # THIS IS AN AUTO-GENERATED FILE. DO NOT EDIT!
+# production requirements
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+pygooglehelper
+pytconf
+pylogconf
+pyvardump
+youtube-dl
+browsercookie
 # dev requirements
 pyclassifiers
 pypitools
