--- a/.mypy.ini
+++ b/.mypy.ini
@@ -7,6 +7,27 @@ disable_error_code = annotation-unchecked
 # ignore_missing_imports = True
 
 # Third party libraries
+[mypy-gdata.*]
+ignore_missing_imports = True
+
+[mypy-google.auth.*]
+ignore_missing_imports = True
+
+[mypy-google_auth_oauthlib.*]
+ignore_missing_imports = True
+
+[mypy-boto3.*]
+ignore_missing_imports = True
+
+[mypy-svgwrite.*]
+ignore_missing_imports = True
+
+[mypy-sultan.*]
+ignore_missing_imports = True
+
+[mypy-botocore.*]
+ignore_missing_imports = True
+
 [mypy-setuptools.*]
 ignore_missing_imports = True
 
@@ -141,4 +162,13 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-pydmt.*]
+ignore_missing_imports = True
+
+[mypy-pyfakeuse.*]
+ignore_missing_imports = True
+
+[mypy-pypipegzip.*]
+ignore_missing_imports = True
+
+[mypy-pymount.*]
 ignore_missing_imports = True
