--- a/.mypy.ini
+++ b/.mypy.ini
@@ -7,6 +7,12 @@ disable_error_code = annotation-unchecked
 # ignore_missing_imports = True
 
 # Third party libraries
+[mypy-youtube_dl.*]
+ignore_missing_imports = True
+
+[mypy-googleapiclient.*]
+ignore_missing_imports = True
+
 [mypy-gdata.*]
 ignore_missing_imports = True
 
@@ -171,4 +177,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-pymount.*]
+ignore_missing_imports = True
+
+[mypy-pygooglehelper.*]
 ignore_missing_imports = True
