--- a/.mypy.ini
+++ b/.mypy.ini
@@ -7,6 +7,9 @@ disable_error_code = annotation-unchecked
 # ignore_missing_imports = True
 
 # Third party libraries
+[mypy-browsercookie.*]
+ignore_missing_imports = True
+
 [mypy-youtube_dl.*]
 ignore_missing_imports = True
 
