--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,91 @@
-# THIS IS AN AUTO-GENERATED FILE. DO NOT EDIT!
-pyclassifiers
-google-api-python-client
-pygooglehelper
-pytconf
-pylogconf
-pyvardump
-youtube-dl
-browsercookie
-pydmt
-pymakehelper
-pytest
-pytest-cov
-pylint
-flake8
-mypy
+alabaster==0.7.16
+astroid==3.0.3
+attrs==23.2.0
+Babel==2.14.0
+browsercookie==0.7.7
+cachetools==5.3.2
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+coverage==7.4.2
+cryptography==42.0.4
+dill==0.3.8
+docutils==0.20.1
+flake8==7.0.0
+gitdb==4.0.11
+GitPython==3.1.42
+google-api-core==2.17.1
+google-api-python-client==2.119.0
+google-auth==2.28.1
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.62.0
+httplib2==0.22.0
+idna==3.6
+imagesize==1.4.1
+importlib-metadata==7.0.1
+iniconfig==2.0.0
+isort==5.13.2
+jaraco.classes==3.3.1
+jeepney==0.8.0
+Jinja2==3.1.3
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+keyring==24.3.0
+logging-tree==1.9
+lz4==4.3.3
+Mako==1.3.2
+MarkupSafe==2.1.5
+mccabe==0.7.0
+more-itertools==10.2.0
+mypy==1.8.0
+mypy-extensions==1.0.0
+oauthlib==3.2.2
+packaging==23.2
+platformdirs==4.2.0
+pluggy==1.4.0
+protobuf==4.25.3
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pyclassifiers==0.0.12
+pycodestyle==2.11.1
+pycparser==2.21
+pycryptodome==3.20.0
+pydmt==0.3.5
+pyfakeuse==0.0.8
+pyflakes==3.2.0
+Pygments==2.17.2
+pygooglehelper==0.0.5
+pylint==3.0.3
+pylogconf==0.0.37
+pymakehelper==0.0.28
+pyparsing==3.1.1
+pytconf==0.1.12
+pytest==8.0.1
+pytest-cov==4.1.0
+pyvardump==0.0.4
+PyYAML==6.0.1
+referencing==0.33.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+rpds-py==0.18.0
+rsa==4.9
+SecretStorage==3.3.3
+smmap==5.0.1
+snowballstemmer==2.2.0
+Sphinx==7.2.6
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+termcolor==2.4.0
+tomlkit==0.12.3
+typing_extensions==4.9.0
+uritemplate==4.1.1
+urllib3==2.2.1
+venv-run==0.2.0
+yattag==1.15.2
+youtube-dl==2021.12.17
+zipp==3.17.0
