--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,79 @@
 alabaster==1.0.0
-astroid==3.3.5
-attrs==24.2.0
-babel==2.16.0
+astroid==3.3.8
+attrs==25.1.0
+babel==2.17.0
 browsercookie==0.7.9
-cachetools==5.5.0
-certifi==2024.8.30
+cachetools==5.5.1
+certifi==2025.1.31
 cffi==1.17.1
-charset-normalizer==3.4.0
-coverage==7.6.9
+charset-normalizer==3.4.1
+coverage==7.6.11
 cryptography==44.0.0
 dill==0.3.9
 docutils==0.21.2
 flake8==7.1.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-api-core==2.23.0
-google-api-python-client==2.154.0
-google-auth==2.36.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
-googleapis-common-protos==1.66.0
+googleapis-common-protos==1.67.0rc1
 httplib2==0.22.0
 idna==3.10
 imagesize==1.4.1
 iniconfig==2.0.0
-isort==5.13.2
+isort==6.0.0
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
 jeepney==0.8.0
-Jinja2==3.1.4
+Jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-keyring==25.5.0
+keyring==25.6.0
 logging_tree==1.10
-lz4==4.3.3
-Mako==1.3.8
+lz4==4.4.3
+Mako==1.3.9
 MarkupSafe==3.0.2
 mccabe==0.7.0
-more-itertools==10.5.0
-mypy==1.13.0
+more-itertools==10.6.0
+mypy==1.15.0
 mypy-extensions==1.0.0
 oauthlib==3.2.2
 packaging==24.2
 platformdirs==4.3.6
 pluggy==1.5.0
-proto-plus==1.25.0
-protobuf==5.29.1
+proto-plus==1.26.0
+protobuf==5.29.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
-pyclassifiers==0.0.14
+pyclassifiers==0.0.15
 pycodestyle==2.12.1
 pycparser==2.22
 pycryptodome==3.21.0
-pydmt==0.3.18
+pydmt==0.3.19
 pyfakeuse==0.0.9
 pyflakes==3.2.0
-Pygments==2.18.0
+Pygments==2.19.1
 pygooglehelper==0.0.7
-pylint==3.3.2
+pylint==3.3.4
 pylogconf==0.0.38
-pymakehelper==0.0.31
-pyparsing==3.2.0
+pymakehelper==0.0.35
+pyparsing==3.2.1
 pytconf==0.1.18
 pytest==8.3.4
 pytest-cov==6.0.0
 pyvardump==0.0.5
 PyYAML==6.0.2
-referencing==0.35.1
+referencing==0.36.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 rpds-py==0.22.3
 rsa==4.9
 SecretStorage==3.3.3
-smmap==5.0.1
+smmap==5.0.2
 snowballstemmer==2.2.0
 Sphinx==8.1.3
 sphinxcontrib-applehelp==2.0.0
@@ -86,7 +86,7 @@ termcolor==2.5.0
 tomlkit==0.13.2
 typing_extensions==4.12.2
 uritemplate==4.1.1
-urllib3==2.2.3
+urllib3==2.3.0
 venv-run==0.2.0
 yattag==1.16.1
 youtube-dl==2021.12.17
