--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
 googleapis-common-protos==1.70.0
 httplib2==0.22.0
+id==1.5.0
 idna==3.10
 imagesize==1.4.1
 iniconfig==2.1.0
@@ -36,11 +37,14 @@ keyring==25.6.0
 logging_tree==1.10
 lz4==4.4.4
 Mako==1.3.10
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mccabe==0.7.0
+mdurl==0.1.2
 more-itertools==10.7.0
 mypy==1.16.0
 mypy_extensions==1.1.0
+nh3==0.2.21
 oauthlib==3.2.2
 packaging==25.0
 pathspec==0.12.1
@@ -57,23 +61,29 @@ pydmt==0.3.19
 pyfakeuse==0.0.9
 pyflakes==3.3.2
 Pygments==2.19.1
-pygooglehelper==0.0.7
+pygooglehelper==0.0.8
 pylint==3.3.7
 pylogconf==0.0.38
 pymakehelper==0.0.37
 pyparsing==3.2.3
+pypitools==0.0.79
 pytconf==0.1.18
 pytest==8.3.5
 pytest-cov==6.1.1
 pyvardump==0.0.5
 PyYAML==6.0.2
+readme_renderer==44.0
 referencing==0.36.2
 requests==2.32.3
 requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==14.0.0
 roman-numerals-py==3.1.0
 rpds-py==0.25.1
 rsa==4.9.1
 SecretStorage==3.3.3
+setuptools==80.9.0
 smmap==5.0.2
 snowballstemmer==3.0.1
 Sphinx==8.2.3
@@ -85,9 +95,11 @@ sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 termcolor==3.1.0
 tomlkit==0.13.2
+twine==6.1.0
 typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
 venv-run==0.2.0
+wheel==0.45.1
 yattag==1.16.1
 youtube-dl==2021.12.17
