--- a/requirements.txt
+++ b/requirements.txt
@@ -82,6 +82,7 @@ rich==14.0.0
 roman-numerals-py==3.1.0
 rpds-py==0.25.1
 rsa==4.9.1
+ruff==0.12.1
 SecretStorage==3.3.3
 setuptools==80.9.0
 smmap==5.0.2
