no commit message given

--- a/requirements.thawed.txt
+++ b/requirements.thawed.txt
@@ -1,8 +1,10 @@
 # THIS IS AN AUTO-GENERATED FILE. DO NOT EDIT!
 browsercookie
 google-api-python-client
+hatch
 mypy
 pyclassifiers
+pycmdtools
 pydmt
 pygooglehelper
 pylint
