--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,3 +57,14 @@ line-length = 130
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/pytubekit"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+    "src/pytubekit/",
+    "README.md",
+    "LICENSE",
+    "pyproject.toml"
+]
