--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,50 @@
 alabaster==1.0.0
+anyio==4.9.0
 astroid==3.3.10
 attrs==25.3.0
 babel==2.17.0
+beautifulsoup4==4.13.4
 browsercookie==0.8.1
 cachetools==5.5.2
-certifi==2025.4.26
+certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
-coverage==7.8.2
-cryptography==45.0.3
+click==8.2.1
+cryptography==45.0.4
 dill==0.4.0
+distlib==0.3.9
 docutils==0.21.2
-flake8==7.2.0
+filelock==3.18.0
 gitdb==4.0.12
 GitPython==3.1.44
-google-api-core==2.24.2
-google-api-python-client==2.170.0
-google-auth==2.40.2
+google-api-core==2.25.1
+google-api-python-client==2.174.0
+google-auth==2.40.3
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
 googleapis-common-protos==1.70.0
+h11==0.16.0
+hatch==1.14.1
+hatchling==1.27.0
+html5lib==1.1
+httpcore==1.0.9
 httplib2==0.22.0
-id==1.5.0
+httpx==0.28.1
+hyperlink==21.0.0
 idna==3.10
 imagesize==1.4.1
 iniconfig==2.1.0
 isort==6.0.1
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
-jaraco.functools==4.1.0
+jaraco.functools==4.2.1
 jeepney==0.9.0
 Jinja2==3.1.6
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 keyring==25.6.0
 logging_tree==1.10
+lxml==6.0.0
 lz4==4.4.4
 Mako==1.3.10
 markdown-it-py==3.0.0
@@ -42,51 +52,54 @@ MarkupSafe==3.0.2
 mccabe==0.7.0
 mdurl==0.1.2
 more-itertools==10.7.0
-mypy==1.16.0
+mypy==1.16.1
 mypy_extensions==1.1.0
-nh3==0.2.21
-oauthlib==3.2.2
+numpy==2.3.1
+oauthlib==3.3.1
 packaging==25.0
+pandas==2.3.0
 pathspec==0.12.1
+pexpect==4.9.0
 platformdirs==4.3.8
 pluggy==1.6.0
 proto-plus==1.26.1
 protobuf==6.31.1
+ptyprocess==0.7.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyclassifiers==0.0.19
-pycodestyle==2.13.0
+pycmdtools==0.0.85
 pycparser==2.22
-pydmt==0.3.19
+pydmt==0.3.23
 pyfakeuse==0.0.9
-pyflakes==3.3.2
-Pygments==2.19.1
+Pygments==2.19.2
 pygooglehelper==0.0.8
 pylint==3.3.7
 pylogconf==0.0.38
 pymakehelper==0.0.37
 pyparsing==3.2.3
-pypitools==0.0.79
-pytconf==0.1.18
-pytest==8.3.5
-pytest-cov==6.1.1
+pytconf==0.1.19
+pytest==8.4.1
+python-dateutil==2.9.0.post0
+pytidylib==0.3.2
+pytz==2025.2
 pyvardump==0.0.5
 PyYAML==6.0.2
-readme_renderer==44.0
 referencing==0.36.2
-requests==2.32.3
+requests==2.32.4
 requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
 rich==14.0.0
 roman-numerals-py==3.1.0
 rpds-py==0.25.1
 rsa==4.9.1
 ruff==0.12.1
 SecretStorage==3.3.3
-setuptools==80.9.0
+shellingham==1.5.4
+six==1.17.0
 smmap==5.0.2
+sniffio==1.3.1
 snowballstemmer==3.0.1
+soupsieve==2.7
 Sphinx==8.2.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
@@ -95,12 +108,21 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 termcolor==3.1.0
-tomlkit==0.13.2
-twine==6.1.0
-typing_extensions==4.13.2
-uritemplate==4.1.1
-urllib3==2.4.0
+tomli_w==1.2.0
+tomlkit==0.13.3
+tqdm==4.67.1
+trove-classifiers==2025.5.9.12
+types-requests==2.32.4.20250611
+typing_extensions==4.14.0
+tzdata==2025.2
+Unidecode==1.4.0
+uritemplate==4.2.0
+urllib3==2.5.0
+userpath==1.9.2
+uv==0.7.16
 venv-run==0.2.0
-wheel==0.45.1
+virtualenv==20.31.2
+webencodings==0.5.1
 yattag==1.16.1
 youtube-dl==2021.12.17
+zstandard==0.23.0
