--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,3 +76,8 @@ exclude = [
     "config/",
     "*.md",
 ]
+
+[tool.mypy]
+python_version = "3.12"
+warn_return_any = true
+warn_unused_configs = true
