--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ distlib==0.3.9
 docutils==0.21.2
 filelock==3.18.0
 gitdb==4.0.12
-GitPython==3.1.44
+gitpython==3.1.44
 google-api-core==2.25.1
 google-api-python-client==2.174.0
 google-auth==2.40.3
@@ -35,25 +35,25 @@ idna==3.10
 imagesize==1.4.1
 iniconfig==2.1.0
 isort==6.0.1
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.2.1
+jaraco-classes==3.4.0
+jaraco-context==6.0.1
+jaraco-functools==4.2.1
 jeepney==0.9.0
-Jinja2==3.1.6
+jinja2==3.1.6
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 keyring==25.6.0
-logging_tree==1.10
+logging-tree==1.10
 lxml==6.0.0
 lz4==4.4.4
-Mako==1.3.10
+mako==1.3.10
 markdown-it-py==3.0.0
-MarkupSafe==3.0.2
+markupsafe==3.0.2
 mccabe==0.7.0
 mdurl==0.1.2
 more-itertools==10.7.0
 mypy==1.16.1
-mypy_extensions==1.1.0
+mypy-extensions==1.1.0
 numpy==2.3.1
 oauthlib==3.3.1
 packaging==25.0
@@ -66,13 +66,13 @@ proto-plus==1.26.1
 protobuf==6.31.1
 ptyprocess==0.7.0
 pyasn1==0.6.1
-pyasn1_modules==0.4.2
+pyasn1-modules==0.4.2
 pyclassifiers==0.0.19
 pycmdtools==0.0.85
 pycparser==2.22
 pydmt==0.3.26
 pyfakeuse==0.0.9
-Pygments==2.19.2
+pygments==2.19.2
 pygooglehelper==0.0.8
 pylint==3.3.7
 pylogconf==0.0.38
@@ -84,7 +84,7 @@ python-dateutil==2.9.0.post0
 pytidylib==0.3.2
 pytz==2025.2
 pyvardump==0.0.5
-PyYAML==6.0.2
+pyyaml==6.0.2
 referencing==0.36.2
 requests==2.32.4
 requests-oauthlib==2.0.0
@@ -93,14 +93,14 @@ roman-numerals-py==3.1.0
 rpds-py==0.25.1
 rsa==4.9.1
 ruff==0.12.1
-SecretStorage==3.3.3
+secretstorage==3.3.3
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 snowballstemmer==3.0.1
 soupsieve==2.7
-Sphinx==8.2.3
+sphinx==8.2.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
@@ -108,14 +108,14 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 termcolor==3.1.0
-tomli_w==1.2.0
+tomli-w==1.2.0
 tomlkit==0.13.3
 tqdm==4.67.1
 trove-classifiers==2025.5.9.12
 types-requests==2.32.4.20250611
-typing_extensions==4.14.0
+typing-extensions==4.14.0
 tzdata==2025.2
-Unidecode==1.4.0
+unidecode==1.4.0
 uritemplate==4.2.0
 urllib3==2.5.0
 userpath==1.9.2
