--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,23 @@
 alabaster==1.0.0
-anyio==4.9.0
-astroid==3.3.10
+astroid==3.3.11
 attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
 browsercookie==0.8.1
 cachetools==5.5.2
-certifi==2025.7.14
-cffi==1.17.1
-charset-normalizer==3.4.2
+certifi==2025.8.3
+cffi==2.0.0b1
+charset-normalizer==3.4.3
 click==8.2.1
-cryptography==45.0.5
+cryptography==45.0.6
 dill==0.4.0
-distlib==0.3.9
+distlib==0.4.0
 docutils==0.21.2
 filelock==3.18.0
 gitdb==4.0.12
 gitpython==3.1.45
 google-api-core==2.25.1
-google-api-python-client==2.174.0
+google-api-python-client==2.178.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
@@ -27,9 +26,8 @@ h11==0.16.0
 hatch==1.14.1
 hatchling==1.27.0
 html5lib==1.1
-httpcore==1.0.9
 httplib2==0.22.0
-httpx==0.28.1
+httpx==1.0.dev2
 hyperlink==21.0.0
 idna==3.10
 imagesize==1.4.1
@@ -52,18 +50,18 @@ markupsafe==3.0.2
 mccabe==0.7.0
 mdurl==0.1.2
 more-itertools==10.7.0
-mypy==1.16.1
+mypy==1.17.1
 mypy-extensions==1.1.0
-numpy==2.1.3
+numpy==2.3.2
 oauthlib==3.3.1
 packaging==25.0
-pandas==2.3.0
+pandas==2.3.1
 pathspec==0.12.1
 pexpect==4.9.0
 platformdirs==4.3.8
 pluggy==1.6.0
 proto-plus==1.26.1
-protobuf==5.29.5
+protobuf==6.32.0rc2
 ptyprocess==0.7.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
@@ -74,7 +72,7 @@ pydmt==0.3.27
 pyfakeuse==0.0.9
 pygments==2.19.2
 pygooglehelper==0.0.8
-pylint==3.3.7
+pylint==3.3.8
 pylogconf==0.0.38
 pymakehelper==0.0.37
 pyparsing==3.2.3
@@ -90,14 +88,13 @@ requests==2.32.4
 requests-oauthlib==2.0.0
 rich==13.9.4
 roman-numerals-py==3.1.0
-rpds-py==0.26.0
+rpds-py==0.27.0
 rsa==4.9.1
-ruff==0.12.1
+ruff==0.12.8
 secretstorage==3.3.3
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
-sniffio==1.3.1
 snowballstemmer==3.0.1
 soupsieve==2.7
 sphinx==8.2.3
@@ -111,17 +108,18 @@ termcolor==3.1.0
 tomli-w==1.2.0
 tomlkit==0.13.3
 tqdm==4.67.1
-trove-classifiers==2025.5.9.12
-types-requests==2.32.4.20250611
+trove-classifiers==2025.8.6.13
+truststore==0.10.0
+types-requests==2.32.4.20250809
 typing-extensions==4.14.1
 tzdata==2025.2
 unidecode==1.4.0
 uritemplate==4.2.0
 urllib3==2.5.0
 userpath==1.9.2
-uv==0.7.18
+uv==0.8.8
 venv-run==0.2.0
-virtualenv==20.31.2
+virtualenv==20.33.1
 webencodings==0.5.1
 yattag==1.16.1
 youtube-dl==2021.12.17
