--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
 proto-plus==1.26.1
-protobuf==6.32.0rc2
+protobuf==5.29.5
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pyclassifiers==0.0.20
