--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
 proto-plus==1.26.1
-protobuf==5.29.5
+protobuf==6.32.0rc2
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pyclassifiers==0.0.20
@@ -62,15 +62,14 @@ pygments==2.19.2
 pygooglehelper==0.0.8
 pylint==3.3.8
 pylogconf==0.0.38
-pymakehelper==0.0.38
+pymakehelper==0.0.37
 pyparsing==3.2.3
-pytconf==0.1.21
+pytconf==0.1.19
 pytest==8.4.1
 python-dateutil==2.9.0.post0
 pytidylib==0.3.2
 pytz==2025.2
-pyvardump==0.0.5
-pyyaml==6.0.3
+pyyaml==6.0.2
 referencing==0.36.2
 requests==2.32.5
 requests-oauthlib==2.0.0
@@ -90,7 +89,7 @@ sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
-termcolor==3.2.0
+termcolor==3.1.0
 tomlkit==0.13.3
 tqdm==4.67.1
 types-requests==2.32.4.20250809
