--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -28,6 +28,7 @@ theme:
 nav:
   - Home: index.md
   - CLI Reference: cli-reference.md
+  - Quota Guide: quota-guide.md
   - Architecture: architecture.md
   - Development: development.md
   - Notes: notes.md
